# stateman

./: Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
examples/: simple.rs
src/: entry.rs  lib.rs  ref.rs  ref_mut.rs  resource.rs  resources.rs
