[package]
name = "stateman"
version = "0.16.0"
authors = ["Jonathan Wurth <jonathan.wurth@uni-a.de>"]
edition = "2021"
description = "Runtime managed resource borrowing."
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
rt_map = "0.5.2"
better_any = { version = "0.2.0", features = ["derive"] }

[patch.crates-io]
better_typeid_derive = { git = "https://github.com/luleyleo/better_any", branch = "no-use-tidable", package = "better_typeid_derive" }

[features]
default = []
debug = []

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = []